# data_cleaning_eda_crew

./: .env.example  README.md  pyproject.toml
src/data_cleaning_eda_crew/: crew.py  main.py
src/data_cleaning_eda_crew/config/: agents.yaml  tasks.yaml
src/data_cleaning_eda_crew/tools/: __init__.py  eda_tools.py
