[project]
name = "data-cleaning-eda-crew"
version = "0.1.0"
description = "A CrewAI crew that auto-profiles, cleans, and writes an executive EDA summary for a multi-sheet Excel dataset."
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[google-genai]>=1.15.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-dotenv>=1.0",
    "litellm>=1.90.0",
]

[project.scripts]
run-crew = "data_cleaning_eda_crew.main:run"

[tool.crewai]
type = "crew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_cleaning_eda_crew"]
