[project]
name = "data-cleaning-eda-crew"
version = "0.1.0"
description = "A CrewAI crew that auto-profiles, cleans, and writes an executive EDA summary for a multi-sheet Excel dataset."
requires-python = ">=3.11,<3.14"
dependencies = [
    # The google-genai extra is required: crewai 1.15.1 imports its native
    # Gemini provider whenever a "gemini/" model is used, even though we route
    # through LiteLLM. seaborn was dropped to trim the image — matplotlib alone
    # (already a dependency) covers all the plotting.
    "crewai[google-genai]>=1.15.1",
    "pandas>=2.2,!=3.0.4",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "litellm>=1.90.0",
    "requests>=2.31",
]

[project.scripts]
run-crew = "data_cleaning_eda_crew.main:run"

[tool.crewai]
type = "crew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_cleaning_eda_crew"]
